# DaktLib-Core

./: AGENT.md  ARCHITECTURE.md  ARCHITECURE.md  CMakeLists.txt  README.md  TODO.md
.cache/clangd/index/: IAllocator.hpp.00A48DCD3333A4FF.idx  ILogger.hpp.412A55C916A67F49.idx  NullLogger.cpp.B4C814AE2AF94983.idx  NullLogger.hpp.ED53FEF1B0E09BD8.idx  StringView.hpp.B08C8F8524DD6597.idx  SystemAllocator.cpp.BB35750C723DF78E.idx  SystemAllocator.hpp.210AF94B26891635.idx
include/dakt/core/: Buffer.hpp  Core.hpp  FileSystem.hpp  Geometry.hpp  Hash.hpp  Macros.hpp  Memory.hpp  Platform.hpp  String.hpp  Time.hpp  Types.hpp
include/dakt/core/concepts/: CoreConcepts.hpp
include/dakt/core/interfaces/: IAllocator.hpp  IEventBus.hpp  ILogger.hpp  IRegionProvider.hpp  ISerializable.hpp
include/dakt/core/logging/: NullLogger.hpp
include/dakt/core/memory/: SystemAllocator.hpp
include/dakt/core/types/: Result.hpp  Span.hpp  StringView.hpp
src/: Buffer.cpp  FileSystem.cpp  Memory.cpp  Platform.cpp  Time.cpp
src/logging/: NullLogger.cpp
src/memory/: SystemAllocator.cpp
